Margins more manageable and pretty, updated path control (no overwriting). Added \pgref and \ppgref

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -73,8 +73,12 @@
     \change{Made \dac\HideTags cummulative.}
     \change{Created \dac\ShowAllTags for clearing tags list}
     \change{Raises error when pdfTeX(or pdfLaTeX) is not used}
-    % \change{Allow underscore for files in \dac\makeset}
+    \change{Allow underscore for files in \dac\makeset}
     \change{Added \dac\exercisepoints for getting total number of points in an exercise/problem.}
+    \change{added \dac\pgref and \dac\ppgref}
+    \change{Margins now more manageable}
+    \change{Prevent overwriting of \dac\graphicspath}
+    \change{Set (append) to \dac\input@path no matter what.}
 \chlogtable
 
 
