--- a/src/pathcontrol.tex
+++ b/src/pathcontrol.tex
@@ -6,10 +6,14 @@
 \xdef\figuresPath{\@figrootDir/}
 \gdef\fileInputPath{}
 \gdef\fileInputBase{}
+% \providecommand*{\tstcommand}{HELLO}
+\@ifundefined{input@path}{\gdef\input@path{}}{}
+\AtBeginDocument{%
 \providecommand*{\input@path}{}
 \providecommand*{\Ginput@path}{}
-\g@addto@macro\input@path{{\fileInputBase}{\fileInputPath}}
-\g@addto@macro\Ginput@path{{\fileInputBase}{\fileInputPath}}
+\g@addto@macro\input@path{{\fileInputBase}{\fileInputPath}}%
+\g@addto@macro\Ginput@path{{\fileInputBase}{\fileInputPath}}%
+}
 \At\PathControl{
   \makeatletter
   \xdef\figuresPath{\@figrootDir/}
@@ -19,6 +23,5 @@
   \expandafter\filename@parse{\exfile}
   \xdef\fileInputPath{\figuresPath\filename@area}
   \xdef\fileInputBase{\figuresPath\filename@area\filename@base/}
-
   \makeatother
 }
