--- a/src/ifs.tex
+++ b/src/ifs.tex
@@ -27,5 +27,6 @@
 \g@newif\ifexb@opt@doMargins
 \g@newif\ifexb@CountIntros
 \g@newif\ifexb@noheadArg
+\g@newif\ifexb@showtags
 \exb@b@nextprob@headerfalse
 \exbank@if@needspacetrue
