--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -79,6 +79,9 @@
     \change{Margins now more manageable}
     \change{Prevent overwriting of \dac\graphicspath}
     \change{Set (append) to \dac\input@path no matter what.}
+    \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
+    \change{Added command \dac\buildall to build all sets}
+    \change{Moved tag placement for when \dac\ShowTags active}
 \chlogtable
 
 
